# orogene

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.VSCodeCounter/: details.md  results.csv  results.md  results.txt
src/: main.rs
