[package]
name = "orogene"
version = "0.1.0"
authors = ["lowercasename <raphaelkabo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = "0.7.0"
clap = "3.0.0-beta.1"
html-minifier = "1.2.1"
copy_dir = "0.1.2"
ansi_term = "0.12.1"
frontmatter = "0.4.0"
regex = "1.3.9"
chrono = "0.4.11"