[package]
name = "orogene"
version = "0.2.0"
authors = ["Raphael Kabo <mail@raphaelkabo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = "0.7.0"
clap = { version = "3.1.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
html-minifier = "1.2.1"
copy_dir = "0.1.2"
ansi_term = "0.12.1"
frontmatter = "0.4.0"
gray_matter = "0.2.2"
regex = "1.3.9"
chrono = "0.4.11"
rss = "2.0"
toml = "0.5"
